cmake_minimum_required(VERSION 3.17)
project(11_Funciones_en_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(11_Funciones_en_C__0 Concepto_Funcion.cpp)
add_executable(11_Funciones_en_C__00 Plantillas.cpp)
add_executable(11_Funciones_en_C__001 Definicion_de_funcion.cpp)
add_executable(11_Funciones_en_C__002 Plantilla_de_Funciones.cpp)
add_executable(11_Funciones_en_C__003 Paso_de_parametro_por_referencia.cpp)
add_executable(11_Funciones_en_C__004 Paso_de_parametro_de_tipo_vector.cpp)
add_executable(11_Funciones_en_C__005 Paso_de_parametros_de_tipo_matriz.cpp)
add_executable(11_Funciones_en_C__006 Paso_de_parametros_de_tipo_estructura.cpp)
add_executable(11_Funciones_en_C__007 Recursividad-Factorial_de_un_numero.cpp)
add_executable(11_Funciones_en_C__008 Paso_de_parametro_por_referencia.cpp)
add_executable(11_Funciones_en_C__1 Ejercicio_1.cpp)
add_executable(11_Funciones_en_C__2 Ejercicio_2.cpp)
add_executable(11_Funciones_en_C__3 Ejercicio_3.cpp)
add_executable(11_Funciones_en_C__4 Ejercicio_4.cpp)
add_executable(11_Funciones_en_C__5 Ejercicio_5.cpp)
add_executable(11_Funciones_en_C__6 Ejercicio_6.cpp)
add_executable(11_Funciones_en_C__7 Ejercicio_7.cpp)
add_executable(11_Funciones_en_C__8 Ejercicio_8.cpp)
add_executable(11_Funciones_en_C__9 Ejercicio_9.cpp)
add_executable(11_Funciones_en_C__10 Ejercicio_10.cpp)
add_executable(11_Funciones_en_C__11 Ejercicio_11.cpp)
add_executable(11_Funciones_en_C__12 Ejercicio_12.cpp)
add_executable(11_Funciones_en_C__13 Ejercicio_13.cpp)
add_executable(11_Funciones_en_C__14 Ejercicio_14.cpp)
add_executable(11_Funciones_en_C__15 Ejercicio_15.cpp)
add_executable(11_Funciones_en_C__16 Ejercicio_16.cpp)
add_executable(11_Funciones_en_C__17 Ejercicio_17.cpp)
add_executable(11_Funciones_en_C__18 Ejercicio_18.cpp)
add_executable(11_Funciones_en_C__19 Ejercicio_19.cpp)
add_executable(11_Funciones_en_C__20 Ejercicio_20.cpp)
add_executable(11_Funciones_en_C__21 Ejercicio_21.cpp)
add_executable(11_Funciones_en_C__22 Ejercicio_22.cpp)