cmake_minimum_required(VERSION 3.17)
project(12_Punteros_en_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(12_Punteros_en_C__0 Declaracion_de_punteros.cpp)
add_executable(12_Punteros_en_C__000 Correspondencia_entre_arrays_y_punteros.cpp)
add_executable(12_Punteros_en_C__001 Asignacion_dinamica_de_arreglo.cpp)
add_executable(12_Punteros_en_C__002 Trasmision_de_direcciones.cpp)
add_executable(12_Punteros_en_C__003 Trasmision_de_arreglos.cpp)
add_executable(12_Punteros_en_C__004 Matriz_dinamica.cpp)
add_executable(12_Punteros_en_C__005 Puntero_a_Estructura.cpp)
add_executable(12_Punteros_en_C__1 Ejercicio_1.cpp)
add_executable(12_Punteros_en_C__2 Ejercicio_2.cpp)
add_executable(12_Punteros_en_C__3 Ejercicio_3.cpp)
add_executable(12_Punteros_en_C__4 Ejercicio_4.cpp)
add_executable(12_Punteros_en_C__5 Ejercicio_5.cpp)
add_executable(12_Punteros_en_C__6 Ejercicio_6.cpp)
add_executable(12_Punteros_en_C__7 Ejercicio_7.cpp)
add_executable(12_Punteros_en_C__8 Ejercicio_8.cpp)
add_executable(12_Punteros_en_C__9 Ejercicio_9.cpp)
add_executable(12_Punteros_en_C__10 Ejercicio_10.cpp)
add_executable(12_Punteros_en_C__11 Ejercicio_11.cpp)
add_executable(12_Punteros_en_C__12 Ejercicio_12.cpp)
