cmake_minimum_required(VERSION 3.16)
project(2_Expresiones_en_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(2_Expresiones_en_C__1 Ejercicio_1.cpp)
add_executable(2_Expresiones_en_C__2 Ejercicio_2.cpp)
add_executable(2_Expresiones_en_C__3 Ejercicio_3.cpp)
add_executable(2_Expresiones_en_C__4 Ejercicio_4.cpp)
add_executable(2_Expresiones_en_C__5 Ejercicio_5.cpp)
add_executable(2_Expresiones_en_C__6 Ejercicio_6.cpp)
add_executable(2_Expresiones_en_C__7 Ejercicio_7.cpp)
add_executable(2_Expresiones_en_C__8 Ejercicio_8.cpp)
add_executable(2_Expresiones_en_C__9 Ejercicio_9.cpp)
add_executable(2_Expresiones_en_C__10 Ejercicio_10.cpp)
