cmake_minimum_required(VERSION 3.14)
project(7_cadenas_en_c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(7_cadenas_en_c__ main.cpp )
add_executable(7_cadenas_en_c___2 Longitud_de_una_cadena.cpp)
add_executable(7_cadenas_en_c___3 Ejercicio_1.cpp)
add_executable(7_cadenas_en_c___4 Copiar_una_cadena_a_otra.cpp)
add_executable(7_cadenas_en_c___5 Ejercicio_2.cpp)
add_executable(7_cadenas_en_c___6 Comparar_cadenas.cpp)
add_executable(7_cadenas_en_c___7 Ejercicio_3.cpp)
add_executable(7_cadenas_en_c___8 Concatenar_una_cadena.cpp)
add_executable(7_cadenas_en_c___9 Ejercicio_4.cpp)
add_executable(7_cadenas_en_c___10 Invertir_una_cadena.cpp)
add_executable(7_cadenas_en_c___11 Ejercicio_5.cpp)
add_executable(7_cadenas_en_c___12 Palabra_a_mayuscula.cpp)
add_executable(7_cadenas_en_c___13 Ejercicio_6.cpp)
add_executable(7_cadenas_en_c___14 Pasar_una_palabra_a_minusculas.cpp)
add_executable(7_cadenas_en_c___15 Ejercicio_7.cpp)
add_executable(7_cadenas_en_c___16 Transformar_una_cadena_a_numeros.cpp)
add_executable(7_cadenas_en_c___17 Ejercicio_8.cpp)
add_executable(7_cadenas_en_c___18 Ejercicio_9.cpp)